--- a/barcaInfo.css
+++ b/barcaInfo.css
@@ -8,26 +8,103 @@ body {
     background-color: white;
 }
 
+/*Encabezados h1*/
 header h1 {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px 0;
+    margin: 0;
+    font-size: 39px;
+    color: white;
+    background-color: #181733;
+}
+
+/* De la página de menú principal*/
+header p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #edbb00;
+    font-weight: bold;
+    text-align: center;
+    font-size: large
+    ;
+}
+
+/*Encabezados h2*/
+h2 {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 20px 0;
     margin: 0;
     color: white;
-    background-color: #181733;
+    background-color: #a50044;
 }
 
+/*Encabezados h3*/
+h3{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+/* De la página menú principal*/
+article {
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #a50044;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* De la página menú principal*/
+article img {
+  display: block;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+
+/* De la página menú principal*/
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;          
+  justify-content: flex-end; 
+  align-items: center;
+  height: 30px; 
+}
+
+
+/* De la página menú principal*/
+nav ul li {
+  padding: 0 15px;
+  position: relative;
+  background-color: #ccc;
+}
+
+/* De la página menú principal*/
+nav ul li:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 10%;
+  height: 90%;       
+  width: 1px;
+  background-color: #a50044; 
+}
+
+
+/* De la página de inicio de sesión*/
 .login-layout {
     display: flex;
     flex-direction: row;
     height: 100vh;
 }
 
+/* De la página de inicio de sesión*/
 form {
     width: 50%;
-    height: 90vh;
+    height: 100vh;
     padding: 90px;
-    background-color: white;
+    background-color: #181733;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,25 +112,31 @@ form {
     box-shadow: 4px 0 15px rgba(0, 0, 0, 0.5);
 }
 
+/* De la página de inicio de sesión*/
 fieldset {
     border: none;
     margin: 0;
     padding: 0;
 }
 
+/* De la página de inicio de sesión*/
 legend {
     margin-bottom: 50px;
     font-size: 1.5rem;
     font-weight: bold;
+    color: white;
 }
 
+/* De la página de inicio de sesión*/
 label {
     display: block;
     margin-bottom: 6px;
     font-weight: bold;
     font-size: 1.2rem;
+    color: white;
 }
 
+/* De la página de inicio de sesión*/
 input {
     width: 100%;
     padding: 18px;
@@ -63,12 +146,14 @@ input {
     border-radius: 4px;
 }
 
+/* De la página de inicio de sesión*/
 #error-msg {
     color: red;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
+/* De la página de inicio de sesión*/
 button {
     width: 100%;
     padding: 20px;
@@ -81,18 +166,61 @@ button {
     cursor: pointer;
 }
 
+/* De la página de inicio de sesión*/
 aside {
     width: 50%;
     min-height: 80vh;
-    background-image: url('/imagenes/barcelonaEscudo.png');
+    background-image: url('imagenes/barcelonaEscudo.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 4px 0 15px rgba(0, 0, 0, 0.5);
 }
 
+/* De la página de menú principal*/
+.visually-hidden {
+  position: absolute !important;
+  width: 1px; 
+  height: 1px; 
+  padding: 0; 
+  margin: -1px; 
+  overflow: hidden; 
+  clip: rect(0, 0, 0, 0); 
+  white-space: nowrap;
+  border: 0;
+}
 
 
+main section {
+  max-width: 100%;
+  overflow-x: auto;
+  padding: 0 10px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed; 
+}
+
+th, td {
+  border: 1px solid #181733;
+  padding: 8px;
+  text-align: center;
+  word-wrap: break-word;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+#tabla-jugadores img {
+  width: 150px;     
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  object-fit: contain;
+}
 
 /* Responsive para móviles */
 @media screen and (max-width: 768px) {
