--- a/barcaInfo.css
+++ b/barcaInfo.css
@@ -296,8 +296,16 @@ aside {
   }
 }
 
+/* Ocultar la imagen del login si la orientación es vertical*/
 @media screen and (max-width: 768px) and (orientation: portrait) {
-  aside {
-    display: none;
-  }
+    aside {
+        display: none;
+    }
+
+    form {
+        width: 100%;
+        height: 100vh; 
+        padding: 20px;  
+        box-shadow: none;
+    }
 }
