--- a/barcaInfo.css
+++ b/barcaInfo.css
@@ -34,9 +34,6 @@ h3 {
   font-weight: bold;
 }
 
-h3 p {
-  max-width: 60ch;
-}
 
 
 /* De la página de menú principal*/
@@ -47,6 +44,10 @@ header p {
   text-align: center;
   font-size: large;
   background-color: #181733;
+}
+
+p{
+  text-align: justify;
 }
 
 article {
@@ -134,6 +135,9 @@ th {
   background-color: #f2f2f2;
 }
 
+caption{
+  margin-bottom: 10px;
+}
 
 /* De la página de inicio de sesión*/
 .login-layout {
